--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,7 +1,7 @@
 leftnav:
 - identifier: ea6634c6-1841-f34c-97bd-e95620a88401
   name: Instructor Insights
-  pageRef: /pages/awesome-instructor-insights
+  pageRef: /pages/kinda-awesome-instructor-insights
   weight: 10
 - identifier: f803f749-08f1-c66f-60a3-cce1b7107d8d
   name: Privacy and Surveillance
@@ -31,3 +31,7 @@ leftnav:
   name: Law and Policy
   pageRef: /pages/law-policy
   weight: 80
+- identifier: 615e2a52-4b89-4468-8c69-6f1524c28052
+  name: Some Page
+  pageRef: /pages/some-page
+  weight: 90
